# ClamSelector-RK3588

./: .gitignore  README.md
Hardware/: .mxproject  CMakeLists.txt  Makefile  main.ioc
Hardware/Core/Inc/: main.h  stm32f4xx_it.h  tim.h
Hardware/Core/Src/: can.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
Hardware/cmake/stm32cubemx/: CMakeLists.txt
Hardware/lib/: CMakeLists.txt
Hardware/lib/inc/: dc_motor.h  rs485.h  stepmotor.h
Hardware/lib/src/: dc_motor.c  rs485.c  stepmotor.c
Software/: .CMakeLists.txt.swp  CMakeLists.txt  decodethread.cpp  decodethread.h  inferencethread.cpp  inferencethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialworker.cpp  serialworker.h
Software/communication/: CMakelists.txt  serialport.cpp  serialport.hpp
Software/communication/test/: CMakeLists.txt  main.cpp
Software/decoder/: CMakeLists.txt  basedecoder.cpp  basedecoder.hpp  decoder.cpp  decoder.h  hwdecoder.cpp  hwdecoder.hpp  swdecoder.cpp  swdecoder.hpp
Software/modelloader/: CMakeLists.txt  basemodelloader.cpp  basemodelloader.h  rknnmodelloader.cpp  rknnmodelloader.h  tensorrtmodelloader.cpp  tensorrtmodelloader.h
Software/modelloader/test/: CMakeLists.txt  main.cpp
Software/scaler/: CMakeLists.txt  basescaler.cpp  basescaler.h  rgascaler.cpp  rgascaler.h  rgascalerplus.cpp  rgascalerplus.h  softwarescaler.cpp  softwarescaler.h
Software/scaler/test/: main.cpp
